@@ -35,6 +35,9 @@ package org.glavo.webdav.nanohttpd.internal;
 
 import org.jetbrains.annotations.NotNull;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
 import java.util.concurrent.Executor;
 import java.util.concurrent.ExecutorService;
 
@@ -53,10 +56,6 @@ public class AsyncRunner implements AutoCloseable {
 
     private final Executor executor;
     private final boolean shutdown;
-
-    public AsyncRunner() {
-        this(new DefaultExecutor());
-    }
 
     public AsyncRunner(Executor executor) {
         this.executor = executor;
@@ -121,15 +120,72 @@ public class AsyncRunner implements AutoCloseable {
         }
     }
 
-    private static final class DefaultExecutor implements Executor {
+    public static final class DefaultExecutor implements Executor {
         private long requestCount;
 
         @Override
         public void execute(@NotNull Runnable command) {
-            Thread t = new Thread(command);
+            Thread t = new Thread(command, "NanoHttpd Request Processor (#" + this.requestCount++ + ")");
             t.setDaemon(true);
-            t.setName("NanoHttpd Request Processor (#" + this.requestCount++ + ")");
             t.start();
+        }
+    }
+
+    public static final class VirtualThreadExecutor implements Executor {
+        private static final boolean AVAILABLE;
+        private static final boolean NEED_ENABLE_PREVIEW;
+
+        private static final MethodHandle newThread;
+
+        static {
+            boolean available = false;
+            boolean needEnablePreview = false;
+            MethodHandle newThreadHandle = null;
+
+            try {
+                Class<?> vtBuilder = Class.forName("java.lang.Thread$Builder$OfVirtual");
+
+                MethodHandles.Lookup lookup = MethodHandles.publicLookup();
+                Object factory = lookup.findStatic(Thread.class, "ofVirtual", MethodType.methodType(vtBuilder)).invoke();
+
+                newThreadHandle = lookup.findVirtual(vtBuilder, "unstarted", MethodType.methodType(Thread.class, Runnable.class))
+                        .bindTo(factory);
+
+                available = true;
+            } catch (UnsupportedOperationException ignored) {
+                needEnablePreview = true;
+            } catch (Throwable ignored) {
+            }
+
+            AVAILABLE = available;
+            NEED_ENABLE_PREVIEW = needEnablePreview;
+            newThread = newThreadHandle;
+        }
+
+        public static void checkAvailable() {
+            if (!AVAILABLE) {
+                throw new UnsupportedOperationException(NEED_ENABLE_PREVIEW
+                        ? "Preview Features not enabled, need to run with --enable-preview"
+                        : "Please upgrade to Java 19+");
+            }
+        }
+
+        private long requestCount;
+
+        public VirtualThreadExecutor() {
+        }
+
+        @Override
+        public void execute(@NotNull Runnable command) {
+            try {
+                Thread t = (Thread) newThread.invokeExact(command);
+                t.setName("NanoHttpd Request Processor (#" + this.requestCount++ + ")");
+                t.start();
+            } catch (RuntimeException | Error e) {
+                throw e;
+            } catch (Throwable e) {
+                throw new RuntimeException(e);
+            }
         }
     }
 }
